--- a/Inicio/Inicio/Inicio.css
+++ b/Inicio/Inicio/Inicio.css
@@ -5,15 +5,15 @@ body {
     background: #f4f4f4;
     display: flex;
     flex-direction: column;
-    height: 100vh;
-    position: relative;
+    min-height: 100vh;
     justify-content: center;
+    position: relative;
 }
 
 .header {
     position: absolute;
-    top: 40px; /* Ajusta según sea necesario */
-    left: 40px; /* Ajusta según sea necesario */
+    top: 40px;
+    left: 40px;
     width: 100%;
     background-color: #f4f4f4;
     text-align: left;
@@ -39,10 +39,10 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 750px; /* Ajusta el ancho del contenedor */
+    width: 750px;
     padding: 20px;
     background: #fff;
-    margin-right: 460px; /* Ajusta la separación entre el formulario y el logo */
+    margin-right: 460px;
     border-radius: 10px;
 }
 
@@ -55,7 +55,7 @@ body {
 
 .login-form input[type="text"],
 .login-form input[type="password"] {
-    width: 100%; /* Ajusta el ancho de los campos de entrada */
+    width: 100%;
     padding: 10px;
     margin-bottom: 10px;
     border: 1px solid #ddd;
@@ -63,7 +63,7 @@ body {
 }
 
 .login-form button {
-    width: 100%; /* Ajusta el ancho del botón */
+    width: 100%;
     padding: 10px;
     border-radius: 10px;
     background: #0056b3;
@@ -77,7 +77,7 @@ body {
 }
 
 .logo {
-    max-width: 100%; /* Ajusta el tamaño del logo */
+    max-width: 100%;
     height: auto;
     position: relative;
     left: -200px;
@@ -85,8 +85,8 @@ body {
 
 .footer {
     position: absolute;
-    bottom: 20px; /* Ajusta según sea necesario */
-    left: 20px; /* Ajusta según sea necesario */
+    bottom: 20px;
+    left: 20px;
     width: auto;
     background-color: #f4f4f4;
     text-align: left;
@@ -132,8 +132,6 @@ body {
 
 .button:hover {
     background-color: #003B7A;
-    width: 100%;
-    height: 40px;
 }
 
 .button:hover::before {
@@ -145,20 +143,54 @@ body {
     transform: translateY(4px);
 }
 
-body {
-    font-family: sans-serif;
-    font-size: 1.2rem;
-    min-height: 100%;
-}
-
-html {
-    height: 100%;
-}
-
 .register-text {
-    margin-top: 20px; /* Ajusta este valor según sea necesario */
+    margin-top: 20px;
     text-align: center;
-    position: relative; /* Añade posición relativa si es necesario */
-    top: -100px; /* Ajusta este valor para mover el texto hacia abajo */
-    left: -700px; /* Ajusta este valor para mover el texto hacia la izquierda */
+    position: relative;
+    top: -100px;
+    left: -700px;
 }
+
+/* Media Queries para dispositivos móviles */
+@media (max-width: 768px) {
+    .header {
+        top: 20px;
+        left: 20px;
+        width: calc(100% - 40px);
+        text-align: center; /* Centrar texto en móviles */
+    }
+
+    .outer-container {
+        flex-direction: column; /* Ajustar dirección de elementos en móviles */
+        align-items: center;
+    }
+
+    .login-container {
+        width: 80%;
+        margin-right: -5px;
+    }
+
+    .logo {
+        position: relative;
+        left: 0;
+        /* Añadir margen superior para colocar el logo encima del login */
+        margin-top: -600px; /* Ajustar valor según la altura del logo */
+        margin-bottom: -160px;
+        max-width: 70%; /* Ajustar tamaño del logo en móviles */
+        transform: translate(0px, 0px);
+    }
+
+    .register-text {
+        top: 260px;
+        left: 0;
+        margin-top: 140px;
+    }
+
+    .footer {
+        bottom: 10px;
+        left: 10px;
+        width: calc(100% - 20px);
+        text-align: center; /* Centrar texto en móviles */
+    }
+}
+
