--- a/Alumnos/Alumnos.css
+++ b/Alumnos/Alumnos.css
@@ -1,140 +1,146 @@
-html{
-    height: 100%;
-}
-
-body {
-    font-family: Arial, sans-serif;
-    background-color: #FFEFD5;
-    margin: 0;
-    padding: 0;
-
-    min-height: 100%;
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-}
-/*Estilo del contenedor principal (wrapper):*/
-.wrapper {
-    background-color: #ffffff;
-    padding: 15px;
-    margin: 15px;
-    border-radius: 5px;
-    clear: both;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-}
-/*Estilo del encabezado (header):*/
-header {
-    background-color: #ffffff;
-    padding: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 0.1px solid #b6b6b6;
-}
-
-header h1 {
-    margin: 0;
-    font-size: 16px;
-    color: #000;
-}
-/*Estilo del botón de cierre de sesión (logout):*/
-header .logout {
-    background-color: #004494;
-    color: white;
-    padding: 10px 15px;
-    text-decoration: none;
-    border-radius: 20px;
-    transition: background-color 0.5s ease; /* Add the transition property */
-    position: relative; /* Set the position to relative for the pseudo-elements */
-    overflow: hidden;
-}
-
-header .logout::before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(0);
-    width: 100%;
-    height: 100%;
-    background-color: #000;
-    border-radius: 20px;
-    transition: transform 0.5s ease;
-    opacity: 0.1;
-}
-
-header .logout:hover {
-    background-color: #003B7A;
-}
-
-header .logout:hover::before {
-    transform: translate(-50%, -50%) scale(1);
-}
-/*Estilo del contenedor (container):*/
-.container {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    padding: 0px;
-}
-/*Estilo del menú (menu):*/
-.menu {
-    display: flex;
-    flex-direction: column;
+@media (min-width: 768px) {
+    html{
+        height: 100%;
+    }
     
+    body {
+        font-family: Arial, sans-serif;
+        background-color: #FFEFD5;
+        margin: 0;
+        padding: 0;
+    
+        min-height: 100%;
+        display: flex;
+        flex-direction: column;
+        margin: 0;
+    }
+    /*Estilo del contenedor principal (wrapper):*/
+    .wrapper {
+        background-color: #ffffff;
+        padding: 15px;
+        margin: 15px;
+        border-radius: 5px;
+        clear: both;
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+    }
+    /*Estilo del encabezado (header):*/
+    header {
+        background-color: #ffffff;
+        padding: 10px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        border-bottom: 0.1px solid #b6b6b6;
+    }
+    
+    header h1 {
+        margin: 0;
+        font-size: 16px;
+        color: #000;
+    }
+    /*Estilo del botón de cierre de sesión (logout):*/
+    header .logout {
+        background-color: #004494;
+        color: white;
+        padding: 10px 15px;
+        text-decoration: none;
+        border-radius: 20px;
+        transition: background-color 0.5s ease; /* Add the transition property */
+        position: relative; /* Set the position to relative for the pseudo-elements */
+        overflow: hidden;
+    }
+    
+    header .logout::before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        width: 100%;
+        height: 100%;
+        background-color: #000;
+        border-radius: 20px;
+        transition: transform 0.5s ease;
+        opacity: 0.1;
+    }
+    
+    header .logout:hover {
+        background-color: #003B7A;
+    }
+    
+    header .logout:hover::before {
+        transform: translate(-50%, -50%) scale(1);
+    }
+    /*Estilo del contenedor (container):*/
+    .container {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        padding: 0px;
+    }
+    /*Estilo del menú (menu):*/
+    .menu {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .menu button{
+        background-color: #004494;
+        color: white;
+        border: none;
+        padding: 35px 50px;
+        margin: 10px 0;
+        font-size: 18px;
+        cursor: pointer;
+        border-radius: 20px;
+        text-align: center;
+    
+        transition: background-color 0.5s ease; /* Add the transition property */
+        position: relative; /* Set the position to relative for the pseudo-elements */
+        overflow: hidden;
+    }
+    
+    .menu button::before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        width: 100%;
+        height: 100%;
+        background-color: #000;
+        border-radius: 20px;
+        transition: transform 0.5s ease;
+        opacity: 0.1;
+    }
+    
+    .menu button:hover {
+        background-color: #003B7A;
+    }
+    
+    .menu button:hover::before {
+        transform: translate(-50%, -50%) scale(1);
+    }
+    /*Estilo del logo:*/
+    .logo {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        /*Mover imagen derecha: margin-left: 890px;*/
+    }
+    
+    .logo img {
+        height: auto;
+        width: 200%;
+    }
+    
+    .menu-toggle{
+        display: none;
+    }
 }
 
-.menu button{
-    background-color: #004494;
-    color: white;
-    border: none;
-    padding: 35px 50px;
-    margin: 10px 0;
-    font-size: 18px;
-    cursor: pointer;
-    border-radius: 20px;
-    text-align: center;
-
-    transition: background-color 0.5s ease; /* Add the transition property */
-    position: relative; /* Set the position to relative for the pseudo-elements */
-    overflow: hidden;
-}
-
-.menu button::before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(0);
-    width: 100%;
-    height: 100%;
-    background-color: #000;
-    border-radius: 20px;
-    transition: transform 0.5s ease;
-    opacity: 0.1;
-}
-
-.menu button:hover {
-    background-color: #003B7A;
-}
-
-.menu button:hover::before {
-    transform: translate(-50%, -50%) scale(1);
-}
-/*Estilo del logo:*/
-.logo {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    /*Mover imagen derecha: margin-left: 890px;*/
-}
-
-.logo img {
-    height: auto;
-    width: 200%;
-}
 
 @media (max-width: 768px) {
     html {
@@ -224,15 +230,18 @@ header .logout:hover::before {
     .menu {
         display: flex;
         flex-direction: column;
+        background-color: #FFEFD5;
+        padding: 25px;
+        position: fixed;
     }
     
     .menu button {
         background-color: #004494;
         color: white;
         border: none;
-        padding: 35px 50px;
+        padding: 25px 20px;
         margin: 10px 0;
-        font-size: 18px;
+        font-size: 15px;
         cursor: pointer;
         border-radius: 20px;
         text-align: center;
@@ -285,4 +294,46 @@ header .logout:hover::before {
         margin-right: 10px; /* Espacio a la derecha */
     }
     
+    /* Estilo del botón de menú: */
+    .menu-toggle {
+        background-color: #004494;
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        margin: 10px;
+        font-size: 18px;
+        cursor: pointer;
+        border-radius: 20px;
+        text-align: center;
+        transition: background-color 0.5s ease;
+        position: relative;
+        overflow: hidden;
+        align-self: center; /* Centrar el botón de menú */
+    }
+
+    .menu-toggle::before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        width: 100%;
+        height: 100%;
+        background-color: #000;
+        border-radius: 20px;
+        transition: transform 0.5s ease;
+        opacity: 0.1;
+    }
+
+    .menu-toggle:hover {
+        background-color: #003B7A;
+    }
+
+    .menu-toggle:hover::before {
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+    .menu.hidden{
+        display: none;
+    }
 }
