--- a/Administrativos/AdministrarTu/AdministrarTu.css
+++ b/Administrativos/AdministrarTu/AdministrarTu.css
@@ -171,6 +171,10 @@
     header .In:hover::before {
         transform: translate(-50%, -50%) scale(1);
     }
+
+    .menu-icon{
+        display: none;
+    }
 }
 
 @media (max-width: 768px) {
@@ -400,7 +404,7 @@
         border-radius: 10px;
         transition: background-color 0.5s ease; /* Add the transition property */
         position: relative; /* Set the position to relative for the pseudo-elements */
-        left: 50px;
+        left: 40px;
         overflow: hidden;
     }
     
