--- a/Inicio.css
+++ b/Inicio.css
@@ -1,159 +1,160 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background: #f4f4f4;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    justify-content: center;
-    position: relative;
-}
-
-.header {
-    position: absolute;
-    top: 40px;
-    left: 40px;
-    width: 100%;
-    background-color: #f4f4f4;
-    text-align: left;
-    padding: 10px;
-}
-
-.title {
-    font-size: 30px;
-    color: #004494;
-    margin: 0;
-}
-
-.outer-container {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    justify-content: center;
-    position: relative;
-}
-
-.login-container {
-    border: 2px solid gray;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 750px;
-    padding: 20px;
-    background: #fff;
-    margin-right: 460px;
-    border-radius: 10px;
-}
-
-.login-form {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.login-form input[type="text"],
-.login-form input[type="password"] {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-}
-
-.login-form button {
-    width: 100%;
-    padding: 10px;
-    border-radius: 10px;
-    background: #0056b3;
-    color: white;
-    cursor: pointer;
-    height: 40px;
-}
-
-.login-form button:hover {
-    background: #004494;
-}
-
-.logo {
-    max-width: 100%;
-    height: auto;
-    position: relative;
-    left: -200px;
-}
-
-.footer {
-    position: absolute;
-    bottom: 20px;
-    left: 20px;
-    width: auto;
-    background-color: #f4f4f4;
-    text-align: left;
-    padding: 10px;
-}
-
-.institution-name {
-    margin: 0;
-    font-weight: bold;
-    color: burlywood;
-}
-
-.button {
-    display: inline-block;
-    padding: 10px 20px;
-    font-size: 20px;
-    text-align: center;
-    cursor: pointer;
-    outline: none;
-    color: #ffffff;
-    background-color: #004494;
-    border: none;
-    border-radius: 15px;
-    text-decoration: none;
-    transition: background-color 0.5s ease;
-    position: relative;
-    overflow: hidden;
-}
-
-.button::before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(0);
-    width: 100%;
-    height: 100%;
-    background-color: #000;
-    border-radius: 15px;
-    transition: transform 0.5s ease;
-    opacity: 0.1;
-}
-
-.button:hover {
-    background-color: #003B7A;
-}
-
-.button:hover::before {
-    transform: translate(-50%, -50%) scale(1);
-}
-
-.button:active {
-    background-color: #004494;
-    transform: translateY(4px);
-}
-
-.register-text {
-    margin-top: 20px;
-    text-align: center;
-    position: relative;
-    top: -100px;
-    left: -700px;
+@media (min-width: 768px) {
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background: #f4f4f4;
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+        justify-content: center;
+        position: relative;
+    }
+    
+    .header {
+        position: absolute;
+        top: 40px;
+        left: 40px;
+        width: 100%;
+        background-color: #f4f4f4;
+        text-align: left;
+        padding: 10px;
+    }
+    
+    .title {
+        font-size: 30px;
+        color: #004494;
+        margin: 0;
+    }
+    
+    .outer-container {
+        display: flex;
+        align-items: center;
+        width: 100%;
+        justify-content: center;
+        position: relative;
+    }
+    
+    .login-container {
+        border: 2px solid gray;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 750px;
+        padding: 20px;
+        background: #fff;
+        margin-right: 460px;
+        border-radius: 10px;
+    }
+    
+    .login-form {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .login-form input[type="text"],
+    .login-form input[type="password"] {
+        width: 100%;
+        padding: 10px;
+        margin-bottom: 10px;
+        border: 1px solid #ddd;
+        border-radius: 5px;
+    }
+    
+    .login-form button {
+        width: 100%;
+        padding: 10px;
+        border-radius: 10px;
+        background: #0056b3;
+        color: white;
+        cursor: pointer;
+        height: 40px;
+    }
+    
+    .login-form button:hover {
+        background: #004494;
+    }
+    
+    .logo {
+        max-width: 100%;
+        height: auto;
+        position: relative;
+        left: -200px;
+    }
+    
+    .footer {
+        position: absolute;
+        bottom: 20px;
+        left: 20px;
+        width: auto;
+        background-color: #f4f4f4;
+        text-align: left;
+        padding: 10px;
+    }
+    
+    .institution-name {
+        margin: 0;
+        font-weight: bold;
+        color: burlywood;
+    }
+    
+    .button {
+        display: inline-block;
+        padding: 10px 20px;
+        font-size: 20px;
+        text-align: center;
+        cursor: pointer;
+        outline: none;
+        color: #ffffff;
+        background-color: #004494;
+        border: none;
+        border-radius: 15px;
+        text-decoration: none;
+        transition: background-color 0.5s ease;
+        position: relative;
+        overflow: hidden;
+    }
+    
+    .button::before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        width: 100%;
+        height: 100%;
+        background-color: #000;
+        border-radius: 15px;
+        transition: transform 0.5s ease;
+        opacity: 0.1;
+    }
+    
+    .button:hover {
+        background-color: #003B7A;
+    }
+    
+    .button:hover::before {
+        transform: translate(-50%, -50%) scale(1);
+    }
+    
+    .button:active {
+        background-color: #004494;
+        transform: translateY(4px);
+    }
+    
+    .register-text {
+        margin-top: 20px;
+        text-align: center;
+        position: relative;
+        top: -100px;
+        left: -700px;
+    }
 }
 
 /* Media Queries para dispositivos móviles */
 @media (max-width: 768px) {
-
     .header {
         top: 20px;
         left: 20px;
@@ -182,7 +183,7 @@ body {
     }
 
     .register-text {
-        top: 260px;
+        top: 300px;
         left: 0;
         margin-top: 140px;
     }
